# yoola_explain

./: .gitignore  AGENTS.md  README.md  Yoola_Design_v3.md  Yoola_Design_v4.md
.github/workflows/: pages.yml
deploy/: server-setup.sh
docs/: api.md  architecture.md  deploy.md  extension.md  gotchas.md  roadmap.md  user-guide.md
docs/legal/: terms-of-service.md
extension/: background.js  content.js  detect.js  manifest.json
extension/popup/: popup.html  popup.js
server/: env.example  pyproject.toml  yoola.db-shm  yoola.db-wal
server/src/yoola/: anchor.py  app.py  clientip.py  config.py  extract.py  fetch.py  identity.py  metrics.py  pipeline.py  plausibility.py  provider.py  schema.py  store.py  taxonomy.py  urltools.py
server/tests/: conftest.py  test_anchor.py  test_api.py  test_clientip.py  test_identity.py  test_llm_real.py  test_multilingual_and_pdf.py  test_plausibility.py  test_provider_parsing.py  test_taxonomy.py  test_urltools.py
shared/: taxonomy.json
site/: index.html  lookup.html  site.js  styles.css
