[project]
name = "yoola-server"
version = "0.1.0"
description = "Yoola backend: URL-first, cache-first ToS checklist summarizer (Design v4)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "trafilatura>=1.9",
    "rapidfuzz>=3.6",
    "pypdf>=4.0",
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yoola"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["llm: integration tests that call the real LLM provider (need server/.env + network)"]
